--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ header section start
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: #87D37C;
+    background: rgba(0,0,0,0.4);
+    padding: 10px 15px;
 }
 
 
