adding indentation in all files and creating responsive_backups.css for get backup responsive.css file because I will edit it now

--- a/css/style.css
+++ b/css/style.css
@@ -7,53 +7,50 @@
 header section start
 ************************/
 
-
 #header {
-     margin-top: 30px; 
-    /* margin-bottom: 40px; */ 
-   margin-bottom: -14px;
+  margin-top: 30px; 
+  margin-bottom: -14px;
 }
 .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover {
-    color: #fff;
-    border-bottom: 1px solid #fff;
-    padding-top: 18px;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  padding-top: 18px;
 }
 .navbar-default .navbar-brand {
-    color: #fff;
-    background: #90bb8a;
+  color: #fff;
+  background: #90bb8a;
 }
 .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:hover {
-    color: #ffffff;
-    background-color: #bdd78f;
+  color: #ffffff;
+  background-color: #bdd78f;
 }
 .navbar-default {
-    background-color: transparent;
-    border-color: transparent;
+  background-color: transparent;
+  border-color: transparent;
 }
 .navbar-default .navbar-nav>li>a {
-    color: #87D37C;
+  color: #87D37C;
 	font-size: 17px;
 }
 .navbar-default .navbar-toggle {
-    border-color: #87D37C;
+  border-color: #87D37C;
 }
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #87D37C;
+  background-color: #87D37C;
 }
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: #87D37C;
-    background: rgba(0,0,0,0.4);
-    padding: 10px 15px;
+  border-color: #87D37C;
 }
-
+.menu_bg {
+  background: rgba(0,0,0,0.4);
+  padding: 10px 15px;
+}
 
 
 /* Crousel slider on Top video*/
 
-
-
 .carousel-indicators .active {
-    background-color: transparent;
+  background-color: transparent;
 }
 .carousel-indicators li{
 	border:none;
@@ -67,41 +64,30 @@ video#bgVideo {
   z-index: -1;
   max-width: 100%;
 }
+/*  header section end */
 
 
-.slider-video-overlay{
+/*****************************
+  portfolio section start
+*******************************/
 
-}
-
-
-/***********************
-header section end
-************************/
-
-/***********************
-portfolio section start
-************************/
-
-/*
-Isotope my code
-*/
-
+/* Isotope my code */
 
 .button-color1{
 	background-color:blue;
 }
 .button-top h1 {
-    margin-bottom: 49px;
-    font-size: 45px;
-    font-weight: 600;
-    font-family: normal;
+  margin-bottom: 49px;
+  font-size: 45px;
+  font-weight: 600;
+  font-family: normal;
 }
 
 /* Isotope start */
 
-
-* { box-sizing: border-box; }
-
+* { 
+  box-sizing: border-box; 
+}
 body {
   font-family: sans-serif;
 }
@@ -137,7 +123,7 @@ body {
 /*  button-group  */
 
 .button-group {
-    margin-bottom: 70px;
+  margin-bottom: 70px;
 }
 .button-group:after {
   content: '';
@@ -152,7 +138,6 @@ body {
 }
 .button-group .button:first-child { border-radius: 0; }
 .button-group .button:last-child { border-radius: 0; }
-
 
 /* clear fix */
 .grid:after {
@@ -170,14 +155,11 @@ body {
   color: #262524;
   width:50%;
   overflow:hidden;
-  
 }
 .element-item img{
 	transition:2s;
 	-webkit-transition:2s;
 	-moz-transition:2s;
-	
-	
 }
 .element-item:hover img{
 	transform:scale(1.2);
@@ -204,18 +186,18 @@ body {
 .element-item.noble-gas       { background: #F08; background: hsl( 324, 100%, 50%); }
 
 .carousel-inner {
-    padding-bottom: 127px;
-    padding-top: 138px;
+  padding-bottom: 127px;
+  padding-top: 138px;
 }
 .after-video-content {
-    background: rgba(0,0,0,0.3);
-    text-transform: uppercase;
-    margin-top: 222px;
-    padding: 10px 10px;
+  background: rgba(0,0,0,0.3);
+  text-transform: uppercase;
+  margin-top: 222px;
+  padding: 10px 10px;
 }
 .after-video-content h2 {
-    color: #fff;
-    font-size: 20px;
+  color: #fff;
+  font-size: 20px;
 }
 .after-video-content h3{
 	font-size:17px;
@@ -223,18 +205,18 @@ body {
 	color:#fff;
 }
 .after-video-content2 h2 {
-    color: #fff;
-    line-height: 40px;
+  color: #fff;
+  line-height: 40px;
 }
 .after-video-content3{
 	background: rgba(0,0,0,0.5);
-    margin-top: -137px;
+  margin-top: -137px;
 	padding:10px 28px;	
 }
 #portfolio{
-    background: #fff;
-    padding-top: 90px;
-    padding-bottom: 70px;
+  background: #fff;
+  padding-top: 90px;
+  padding-bottom: 70px;
 }
 .button one{
 	color:red;
@@ -249,14 +231,14 @@ body {
 	bottom:40%;
 }
 .portfolio-link i{
-    width: 60px;
-    height: 60px;
-    border: 1px solid #87D37C;
-    border-radius: 100%;
-    font-size: 30px;
-    line-height: 59px;
-    padding-left: 15px;
-    color: #87D37C;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #87D37C;
+  border-radius: 100%;
+  font-size: 30px;
+  line-height: 59px;
+  padding-left: 15px;
+  color: #87D37C;
 	transition:.4s;
 }
 .portfolio-link i:hover{
@@ -266,31 +248,27 @@ body {
 	top:0;
 }
 .portfolio-overlay {
-    position: absolute;
-    background: rgba(0, 0, 0, .3);
-    width: 100%;
-    height: 100%;
-    top: -100%;
-    transition: .5s;
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -o-transition: .5s;
+  position: absolute;
+  background: rgba(0, 0, 0, .3);
+  width: 100%;
+  height: 100%;
+  top: -100%;
+  transition: .5s;
+  -webkit-transition: .5s;
+  -moz-transition: .5s;
+  -o-transition: .5s;
 	background-color:rgba(0,0,0,0.5);
-    background-image: linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
-    background-image: -webkit-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
-    background-image: -moz-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
-    background-image: -o-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
+  background-image: linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
+  background-image: -webkit-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
+  background-image: -moz-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
+  background-image: -o-linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 20%);
 }
+/* portfolio section end */
 
 
-/***********************
-portfolio section end
-************************/
-
-/***********************
-about-content section start
-************************/
-
+/*******************************
+  about-content section start
+*******************************/
 
 .about-bg{
 	background:#fff;
@@ -308,13 +286,11 @@ about-content section start
 	color:#333;
 	font-size:13px;
 }
+/*  about-content section end */
+
 
 /***********************
-about-content section end
-************************/
-
-/***********************
-footer section start
+  footer section start
 ************************/
 
 #footer {
@@ -324,16 +300,16 @@ footer section start
 	background-image: -moz-linear-gradient(to right, #333 0%, #222 100%);
 	background-image: -o-linear-gradient(to right, #333 0%, #222 100%);
 	font-family: sans-serif;
-    position: relative;
-    padding-top: 200px;
-    padding-bottom: 200px;
+  position: relative;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .footer-middle{
-    background: #3e3e3e;
-    position: absolute;
-    width: 100%;
-    height: 30%;
-    top: 90%;
+  background: #3e3e3e;
+  position: absolute;
+  width: 100%;
+  height: 30%;
+  top: 90%;
 	font-family: sans-serif;
 }
 .footer-middle-first-content{
@@ -341,39 +317,35 @@ footer section start
 }
 .footer-middle-first-content h2{
 	font-size: 14px;
-    color: #888;
+  color: #888;
 	text-decoration:none;
 }
 .footer-middle-first-content h3{
-    font-size: 15px;
-    color: #fff;
-    line-height: 3px;
+  font-size: 15px;
+  color: #fff;
+  line-height: 3px;
 	font-family: monospace;
 }
 .footer-logo{
 	padding-top:46px;
 }
-}
 .footer-overlay{
 	padding-top:150px;
 	padding-bottom:100px;
-}
-.footer-content{
-	
 }
 .first-content{
 	text-transform:uppercase;
 	padding-bottom:30px;
 }
 .first-content h2{
-    color: #87D37C;
-    font-size: 20px;
-    text-transform: uppercase;
+  color: #87D37C;
+  font-size: 20px;
+  text-transform: uppercase;
 }
 .first-content h3{
 	font-size: 19px;
-    font-weight: 300;
-    color: #fff;
+  font-weight: 300;
+  color: #fff;
 }
 
 .explore{
@@ -384,12 +356,12 @@ footer section start
 }
 .explore h3{
 	color:#888;
-    font-size: 14px;
-    text-transform: uppercase;
+  font-size: 14px;
+  text-transform: uppercase;
 }
 .explore h4{
-    color: #fff;
-    font-size: 16px;
+  color: #fff;
+  font-size: 16px;
 }
 .explore h4:hover{
 	color:#888;
@@ -399,37 +371,37 @@ footer section start
 
 }
 .social-icons i{
-    color: #87D37C;
-    font-size: 28px;
-    padding: 10px 15px;
-    border: 1px solid #fff;
-    margin: 5px 10px;
+  color: #87D37C;
+  font-size: 28px;
+  padding: 10px 15px;
+  border: 1px solid #fff;
+  margin: 5px 10px;
 }
 .social-icons i:hover{
 	color:#fff;
 }
 .social-icons input{
-    padding: 25px 112px;
-    text-transform: uppercase;
-    display: inherit;
-    background: #87D37C;
+  padding: 25px 112px;
+  text-transform: uppercase;
+  display: inherit;
+  background: #87D37C;
 	color:#fff;
 	margin-top:20px;
-    border: none;
+  border: none;
 }
 .social-icons input:hover{
 	background:#62c653;
 	transition:.2s;
 }
 .get-in-touchButton {
-    text-align: center;
-    padding-left: 30px;
+  text-align: center;
+  padding-left: 30px;
 }
 .footer-middle-name a h2{
-    margin-top: 60px;
-    color: #fff;
-    font-family: monospace;
-    font-size: 35px;
+  margin-top: 60px;
+  color: #fff;
+  font-family: monospace;
+  font-size: 35px;
 }
 .footer-middle-name a:hover{
 	text-decoration:none;
@@ -437,20 +409,12 @@ footer section start
 .footer-middle-name a h2:hover{
 	color:#888;
 }
-/***********************
-footer section end
-************************/
+/* footer section end */
 
 
-
-
-
-
-
-/***********************
-Services section start
-************************/
-
+/*************************
+  Services section start
+**************************/
 
 #services{
 	background:#fff;
@@ -461,7 +425,6 @@ Services section start
 	max-width:186px;
 }
 .service-title-overlay{
-	
 	position:absolute;
 	width:100%;
 	height:100%;
@@ -477,36 +440,27 @@ Services section start
 	background:#87D37C;
 	display:inline-block;
 	padding: 20px 15px 20px 53px;
-    margin: 0;
-}
-.be-successful {
-   
-
+  margin: 0;
 }
 .be-successful h1{
-	
-    font-size: 4em;
-    font-family: normal;
+	font-size: 4em;
+  font-family: normal;
 }
 .be-successful p{
-    font-size: 22px;
-    line-height: 40px;
-    margin-top: 40px;
-}
-
-#service-creat{
-	
+  font-size: 22px;
+  line-height: 40px;
+  margin-top: 40px;
 }
 .service-creat{
 	padding:70px 0px;
 }
 .service-creat-overlay {
-    border: 1px solid #ddd;
+  border: 1px solid #ddd;
 	padding:10px;
 	position:relative;
 	overflow:hidden;
 	margin-bottom:30px;
-    height: 258px;
+  height: 258px;
 }
 .creat-overlay{
 	background:rgba(0, 0, 0, 0.1);
@@ -522,31 +476,26 @@ Services section start
 	background:rgba(0, 0, 0, 0.2);	
 }
 .service-creat-overlay h2{
-	    padding-top: 15px;
+  padding-top: 15px;
 }
 .service-creat-overlay p{
-    font-size: 20px;
-    padding-top: 20px;
+  font-size: 20px;
+  padding-top: 20px;
 }
-.creat-logo{}
 .creat-logo i{
-    font-size: 80px;
-    color: #87d37c;
+  font-size: 80px;
+  color: #87d37c;
 }
+/* Services section end */
 
 
 /***********************
-Services section end
-************************/
-
-
-/***********************
-whyme section start
+  whyme section start
 ************************/
 
 #whyme{
 	background:#fff;
-    margin-bottom: 90px;
+  margin-bottom: 90px;
 }
 .whyme-header{
 	padding:100px 0px;
@@ -557,18 +506,9 @@ whyme section start
 	
 }
 .whyme-header p{
-    font-size: 22px;
-    line-height: 40px;
-    margin-top: 40px;
-}
-.whayme-approach{
-	
-}
-.whyme-content-1{
-	
-}
-.whyme-content-1 h2{
-	
+  font-size: 22px;
+  line-height: 40px;
+  margin-top: 40px;
 }
 .whyme-content-1 img{
  max-width:100%;
@@ -577,65 +517,50 @@ whyme section start
 	padding: 11px 25px 0px 35px;
 }
 .whyme-content-2 h2 {
-    font-size: 35px;
-    font-family: normal;
-    padding: 40px 0px;
+  font-size: 35px;
+  font-family: normal;
+  padding: 40px 0px;
 	color:#000;
 }
 .whyme-content-2 p{
-     font-size: 22px;
+  font-size: 22px;
 }
 .whyme-content-3{
 	padding:65px 25px 0px 25px;
 }
 .whyme-content-3 h2{
-    font-size: 35px;
-    font-family: normal;
-    padding: 40px 0px;
+  font-size: 35px;
+  font-family: normal;
+  padding: 40px 0px;
 	color:#000;
 }
 .whyme-content-3 p{
-     font-size: 22px;
-}
-.whyme-content-4{
-	
+  font-size: 22px;
 }
 .whyme-content-4 img{
- max-width:100%;
+  max-width:100%;
 }
 .col-md-6{
 	padding-right:0px;
 	padding-left:0px;
 }
+/* whyme section end */
 
-
-
-
-/***********************
-whyme section end
-************************/
 
 /***********************
 Form section Start
 ************************/
 
-
 #form{
 	background:#fff;
 }
-
-
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
-
-
-
 .form-body {
   max-width: 600px;
   width: 100%;
   margin: 0 auto;
   position: relative;
 }
-
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -644,30 +569,25 @@ Form section Start
 #contact button[type="submit"] {
   font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
 }
-
 #contact {
 	background: #F9F9F9;
-    padding: 25px;
-    /* margin: 200px 0; */
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    margin-top: 150px;
-    margin-bottom: 100px;
+  padding: 25px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  margin-top: 150px;
+  margin-bottom: 100px;
 }
-
 #contact h3 {
   display: block;
   font-size: 30px;
   font-weight: 300;
   margin-bottom: 55px;
 }
-
 #contact h4 {
   margin: 5px 0 15px;
   display: block;
   font-size: 13px;
   font-weight: 400;
 }
-
 fieldset {
   border: medium none !important;
   margin: 0 0 10px;
@@ -675,7 +595,6 @@ fieldset {
   padding: 0;
   width: 100%;
 }
-
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -687,7 +606,6 @@ fieldset {
   margin: 0 0 5px;
   padding: 10px;
 }
-
 #contact input[type="text"]:hover,
 #contact input[type="email"]:hover,
 #contact input[type="tel"]:hover,
@@ -698,13 +616,11 @@ fieldset {
   transition: border-color 0.3s ease-in-out;
   border: 1px solid #aaa;
 }
-
 #contact textarea {
   height: 100px;
   max-width: 100%;
   resize: none;
 }
-
 #contact button[type="submit"] {
   cursor: pointer;
   width: 100%;
@@ -715,50 +631,34 @@ fieldset {
   padding: 10px;
   font-size: 15px;
 }
-
 #contact button[type="submit"]:hover {
   background: #43A047;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   transition: background-color 0.3s ease-in-out;
 }
-
 #contact button[type="submit"]:active {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
-
 .copyright {
   text-align: center;
 }
-
 #contact input:focus,
 #contact textarea:focus {
   outline: 0;
   border: 1px solid #aaa;
 }
-
 ::-webkit-input-placeholder {
   color: #888;
 }
-
 :-moz-placeholder {
   color: #888;
 }
-
 ::-moz-placeholder {
   color: #888;
 }
-
 :-ms-input-placeholder {
   color: #888;
 }
 
-
-
-/***********************
-Form section End
-************************/
-
-
-
-
+/* Form section End */
